--- a/src/Css/MenuBar.css
+++ b/src/Css/MenuBar.css
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    z-index: 1;
 }
 
     .vertical-menu .menu-btn.disabled {
