--- a/src/Css/PlayerStats.css
+++ b/src/Css/PlayerStats.css
@@ -10,7 +10,7 @@ body {
 
 .player-stats {
     padding: 20px;
-    max-width: 1400px;
+    max-width: 1200px;
     margin: 0 auto;
     font-family: 'Roboto', sans-serif;
     display: flex;
@@ -19,6 +19,7 @@ body {
     border: 2px solid #3E3E55;
     border-radius: 10px;
     background-color: #1E1E2F;
+    margin-left: 260px;
 }
 
 .player-info {
