--- a/src/Css/SearchField.css
+++ b/src/Css/SearchField.css
@@ -1,8 +1,8 @@
 .SearchField {
 	position: absolute;
 	width: 200px;
-	margin-top: 5px;
 	margin-left: 800px;
+	z-index: 1;
 }
 
 	.SearchField input {
@@ -22,14 +22,31 @@
 	position: absolute;
 	width: 100%;
 	z-index: 1;
+	border-radius: 5px;
+}
+
+	.suggestions-list li img {
+		margin-left: 8px;
+	}
+
+.text-content {
+	flex-grow: 1;
 }
 
 	.suggestions-list li {
 		padding: 8px;
 		cursor: pointer;
 		color: black;
+		z-index: 1;
+		display: flex;
+		align-items: center;	
 	}
 
 		.suggestions-list li:hover {
 			background-color: #f0f0f0;
 		}
+
+.searchLogo {
+	height: 26px;
+	width: 26px;
+}
