--- a/src/Css/TeamCss/TeamInfoDashboard.css
+++ b/src/Css/TeamCss/TeamInfoDashboard.css
@@ -8,7 +8,7 @@
 	text-align: center;
 	color: white;
 	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-	position: relative;
+	position: absolute;
 	max-width: 1200px;
 }
 
