Made some layout things

--- a/src/Css/Header.css
+++ b/src/Css/Header.css
@@ -1,8 +1,8 @@
 .header {
 	position: fixed;
 	top: 0;
-	left: 0;
-	width: 100%;
+	left: 220px;
+	width: calc(100% - 220px);
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -10,20 +10,30 @@
 	padding: 20px 20px;
 	z-index: 99;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+	margin-bottom: 30px;
 }
 
-.icons {
-	margin-left: 950px;
+.header-content {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
+}
+
+.right-section {
 	display: flex;
 	align-items: center;
 	gap: 20px;
+}
+
+.icons {
+	display: flex;
+	align-items: center;
+	gap: 20px;
+	right: 200px;
 }
 
 	.icons a img {
 		width: 24px;
 		height: 24px;
 	}
-
-body {
-	padding-top: 40px;
-}
