Changes to background color for different pages and ideas

--- a/src/Css/Matches.css
+++ b/src/Css/Matches.css
@@ -1,6 +1,6 @@
 .matches {
     padding: 20px;
-    background-color: #2c2c38; /* Dark background color */
+    background-color: #1E1E2F; /* Dark background color */
     color: #fff; /* White text color */
     border-radius: 10px;
     margin: 0 auto;
