--- a/src/Css/PlayerStats.css
+++ b/src/Css/PlayerStats.css
@@ -6,6 +6,7 @@ body {
     color: white;
     margin: 0;
     padding: 0;
+    
 }
 
 .player-stats {
@@ -20,7 +21,9 @@ body {
     border-radius: 10px;
     background-color: #1E1E2F;
     margin-left: 260px;
+    padding-top: 100px; /* Add top padding to create space below the header */
 }
+
 
 .player-info {
     text-align: center;
