--- a/src/Css/Header.css
+++ b/src/Css/Header.css
@@ -6,12 +6,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #2A2B3D; /* Match menubar color */
-    padding: 30px 20px; /* Increase padding to make the header taller */
+    background-color: #2a2a33;
+    padding: 20px 20px;
     z-index: 99;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 30px;
-    transition: background-color 0.3s, color 0.3s; /* Add transition for animation */
 }
 
 .header-content {
@@ -24,7 +23,7 @@
 .right-section {
     display: flex;
     align-items: center;
-    gap: 20px;
+    margin-left: auto; /* Ensure it pushes to the right */
 }
 
 .icons {
@@ -33,12 +32,7 @@
     gap: 20px;
 }
 
-.icons a img {
-    width: 24px;
-    height: 24px;
-    transition: background-color 0.3s, color 0.3s; /* Add transition for animation */
-}
-
-.icons a:hover img {
-    background-color: #7986CB; /* Match menubar hover color */
-}
+    .icons a img {
+        width: 24px;
+        height: 24px;
+    }
