--- a/src/Css/Header.css
+++ b/src/Css/Header.css
@@ -1,17 +1,16 @@
 .header {
     position: fixed;
     top: 0;
-    left: 0; /* Set left to 0 to align the header with the left edge */
-    width: 100%; /* Ensure the header spans the full width */
+    left: 220px;
+    width: calc(100% - 220px);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #2A2B3D; /* Match menubar color */
-    padding: 30px 20px; /* Increase padding to make the header taller */
+    background-color: #2a2a33;
+    padding: 20px 20px;
     z-index: 99;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    margin-bottom: 30px; /* Add margin-bottom to create space below the header */
-    transition: background-color 0.3s, color 0.3s; /* Add transition for animation */
+    margin-bottom: 30px;
 }
 
 .header-content {
@@ -24,7 +23,7 @@
 .right-section {
     display: flex;
     align-items: center;
-    gap: 20px;
+    margin-left: auto; /* Ensure it pushes to the right */
 }
 
 .icons {
@@ -33,20 +32,7 @@
     gap: 20px;
 }
 
-.icon-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 24px;
-    height: 24px;
-}
-
-    .icon-button img {
+    .icons a img {
         width: 24px;
         height: 24px;
-        transition: background-color 0.3s, color 0.3s; /* Add transition for animation */
-    }
-
-    .icon-button:hover img {
-        background-color: #7986CB; /* Match menubar hover color */
     }
