--- a/src/Css/ProfileMenu.css
+++ b/src/Css/ProfileMenu.css
@@ -1,5 +1,5 @@
 .profile-menu {
-	position: relative; /* Changed from absolute to relative */
+	position: relative;
 	color: #fff;
 	background-color: rgba(255, 255, 255, 0.1);
 	padding: 4px;
