--- a/src/Css/TeamCss/TeamInfoDashboard.css
+++ b/src/Css/TeamCss/TeamInfoDashboard.css
@@ -9,7 +9,8 @@
 	color: white;
 	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 	position: absolute;
-	max-width: 1200px;
+	max-width: 1200px; /*Hejsa*/
+	
 }
 
 	.teamDashboard h1 {
