--- a/src/Css/FeedComponent.css
+++ b/src/Css/FeedComponent.css
@@ -1,3 +1,11 @@
+
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: whitesmoke;
+    color: white;
+    margin: 0;
+}
 .feedContainer {
 	width: 100%;
 	max-width: 700px;
@@ -8,6 +16,8 @@
 	height: 100vh; /* Full height of the screen */
 	overflow-y: auto; /* Enables vertical scrolling */
 }
+
+
 
 .createPostContainer {
 	display: flex;
