--- a/src/Css/MenuBar.css
+++ b/src/Css/MenuBar.css
@@ -4,7 +4,7 @@
     top: 0;
     width: 220px;
     height: 100%;
-    background-color: #2A2B3D;
+    background-color: #1E1E2F; /* Same background color as header */
     padding: 20px;
     color: #fff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -14,6 +14,7 @@
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     z-index: 100;
 }
+
 
 .menu-header {
     text-align: center;
