--- a/src/Css/TeamCss/TeamInfo.css
+++ b/src/Css/TeamCss/TeamInfo.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #1E1E2F;
+    /*background-color: #1E1E2F;*/
     color: white;
     margin: 0;
     padding: 0;
