--- a/src/Css/Header.css
+++ b/src/Css/Header.css
@@ -37,3 +37,18 @@
         width: 24px;
         height: 24px;
     }
+
+.notification-button {
+    position: relative;
+}
+
+.notification-count {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+}
